--- a/frontend/src/assets/locales/cn.json
+++ b/frontend/src/assets/locales/cn.json
@@ -2,6 +2,7 @@
 	"nav-example":"示例功能",
     "monitor-content":"系统监控",
     "chat-content": "AI 聊天",
+    "kg-content": "知识图谱",
     "3dmol-content": "3dmol 示例",
     "welcome-title":"欢迎来到 Let's think 小破站",
     "welcome-des1":"这是使用 React 和 Fastapi 开发的示例程序, 仅作为学习使用。",
