--- a/frontend/src/assets/locales/en.json
+++ b/frontend/src/assets/locales/en.json
@@ -12,9 +12,9 @@
     "monitor-p2":"Server resources: 1cpu 1 thread, memory 1G",
     "monitor-cpu":"CPU Usage: ",
     "monitor-mem":"Memory Usage: ",
-    "chat-p":"AI chat (using the iFlytek Spark model, supporting online queries, such as weather). If you want to use native ChatGPT, here is what the big guys have shared.",
-    "chat-a1":"Click here to go directly to ChatGPT, ",
-    "chat-a2":"More GPTs",
+    "chat-p":"AI chat",
+    "chat-a1":"",
+    "chat-a2":"",
     "3dmol-p":"This is a 3dmol example, which most people should not be able to use.",
     "wechat":"WeChat",
     "google":"Google Mirror",
